k8s/app/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-ingress-resource
  namespace: app
  annotations:
    # "cert-manager, please get a certificate for this Ingress from this supplier"
    cert-manager.io/cluster-issuer: letsencrypt-staging

spec:
  ingressClassName: nginx

  # HTTPS for this name. The certificate will be saved in the Secret "todo-tls".
  tls:
    - hosts:
        - todo.jawsight.online
      secretName: todo-tls

  rules:
    - host: todo.jawsight.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8081

          - path: /health
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8081
